# ocaml-boot-riscv

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.riscv-pk  Makefile  README.md  Tail_Call_Problem_Solution.txt  build.sh  build_normal.sh  cap_matrix.h  choose_compartment_strategy.sh  evaluate_comp_strategy.sh  evaluate_hw_comp_strategy.sh  generate_kernel_hw_comp.sh  install.sh  linker.x  misc_function_names.txt  ocaml-boot-riscv.pc  ocaml-boot-riscv.pc.in  ocaml-bootcode.pc.in  ocaml-riscv-boot.pc.in  opam  problem.txt
arch/: CMakeLists.txt  atomic.h  bits.h  config.h  constructors.cc  encoding.h  fdt.cc  fdt.h  htif.cc  htif.h  machine.h  ocaml-freestanding-compat.cc  ocaml-freestanding-compat.h  ostream.h  output.cc  output.h  startup.cc  uart.cc  uart.h
cmake/: bootConfig.cmake
compartment_allocations/default_cap_files/: compat.cap  print.cap  startup_2.cap  string.cap  trap.cap  uart.cap
compartment_allocations/strategy_1/: compat.cap  htif.cap  htif_exception.cap  initialize_pc_base_bounds.cap  print.cap  print_exception.cap  startup_1.cap  startup_2.cap  string.cap  timer.cap  uart.cap
compartment_allocations/strategy_1_org/: startup_2.cap
compartment_strategy_details/: application_details.txt  dependencies_hello_riscv_unikernel.txt  packages_compartments.txts  strategy_1.txt
compartment_strategy_details/strategy_1/: cap_table.txt  non_255_ocaml__entry_functions.txt  packages_compartments.txt  strategy_details_1.txt
compartment_testcases/: cap_tests.txt
compartment_testcases/hardware_tests/: cap_tests.txt  print.cap
compartment_testcases/outputs/: dump.dump  kernel_cap_1  kernel_cap_10  kernel_cap_11  kernel_cap_12  kernel_cap_13  kernel_cap_14  kernel_cap_15  kernel_cap_16  kernel_cap_17  kernel_cap_18  kernel_cap_19  kernel_cap_2  kernel_cap_20  kernel_cap_21  kernel_cap_22  kernel_cap_3  kernel_cap_4  kernel_cap_5  kernel_cap_6  kernel_cap_7  kernel_cap_8  kernel_cap_9  output_18.txt  output_2.txt
compartment_testcases/test_1/: cap_matrix.h  dir_list.txt  htif.cap  linker_cap_1.x  linker_cap_108.x  linker_cap_119.x  linker_cap_15.x  linker_cap_164.x  linker_cap_230.x  linker_cap_255.x  linker_cap_49.x  linker_cap_99.x  print.cap  text_cap_matrix.txt  uart.cap
compartment_testcases/test_10/: dir_list.txt  linker_cap_131.x  linker_cap_132.x  linker_cap_18.x  linker_cap_191.x  linker_cap_236.x  linker_cap_57.x  linker_cap_64.x  linker_cap_90.x
compartment_testcases/test_11/: dir_list.txt  linker_cap_2.x  linker_cap_229.x  linker_cap_234.x  linker_cap_254.x  linker_cap_29.x  linker_cap_34.x  linker_cap_93.x
compartment_testcases/test_12/: dir_list.txt  htif.cap  linker_cap_115.x  linker_cap_144.x  linker_cap_167.x  linker_cap_202.x  linker_cap_214.x  linker_cap_228.x  linker_cap_240.x  linker_cap_46.x  linker_cap_82.x  linker_cap_88.x  linker_cap_9.x  linker_cap_96.x  print.cap
compartment_testcases/test_13/: dir_list.txt  linker_cap_1.x  linker_cap_113.x  linker_cap_121.x  linker_cap_16.x  linker_cap_165.x  linker_cap_180.x  linker_cap_186.x  linker_cap_2.x  linker_cap_222.x  linker_cap_233.x  linker_cap_254.x  linker_cap_67.x  linker_cap_75.x  linker_cap_92.x  timer.cap
compartment_testcases/test_14/: dir_list.txt  htif.cap  linker_cap_12.x  linker_cap_154.x  linker_cap_155.x  linker_cap_255.x
compartment_testcases/test_15/: dir_list.txt  htif.cap  linker_cap_1.x  linker_cap_101.x  linker_cap_103.x  linker_cap_205.x  linker_cap_24.x  linker_cap_26.x  linker_cap_40.x
compartment_testcases/test_16/: dir_list.txt  htif.cap  linker_cap_120.x  linker_cap_218.x  linker_cap_27.x  linker_cap_50.x  print.cap
compartment_testcases/test_17/: dir_list.txt  linker_cap_110.x  linker_cap_118.x  linker_cap_122.x  linker_cap_142.x  linker_cap_189.x  linker_cap_194.x  linker_cap_201.x  linker_cap_204.x  linker_cap_254.x  linker_cap_36.x  linker_cap_63.x  linker_cap_84.x
compartment_testcases/test_18/: dir_list.txt  linker_cap_1.x  linker_cap_102.x  linker_cap_130.x  linker_cap_185.x  linker_cap_54.x
compartment_testcases/test_19/: dir_list.txt  linker_cap_100.x  linker_cap_147.x  linker_cap_157.x  linker_cap_163.x  linker_cap_17.x  linker_cap_197.x  linker_cap_200.x  linker_cap_248.x  print.cap
compartment_testcases/test_2/: dir_list.txt  htif.cap  linker_cap_14.x  linker_cap_162.x  linker_cap_173.x  linker_cap_176.x  linker_cap_198.x  linker_cap_2.x
compartment_testcases/test_20/: dir_list.txt  linker_cap_1.x  linker_cap_112.x  linker_cap_138.x  linker_cap_2.x  linker_cap_208.x  linker_cap_210.x  linker_cap_253.x  linker_cap_254.x  linker_cap_255.x  linker_cap_30.x  linker_cap_42.x  linker_cap_52.x  linker_cap_62.x
compartment_testcases/test_21/: cap_matrix.h  cap_table.txt  dir_list.txt  htif.cap  linker_cap_1.x  linker_cap_105.x  linker_cap_140.x  linker_cap_161.x  linker_cap_209.x  linker_cap_227.x  linker_cap_252.x
compartment_testcases/test_22/: cap_matrix.h  dir_list.txt  linker_cap_0.x  linker_cap_1.x  linker_cap_177.x  linker_cap_183.x  linker_cap_2.x  linker_cap_241.x  linker_cap_32.x  linker_cap_44.x  linker_cap_61.x  linker_cap_70.x  linker_cap_72.x
compartment_testcases/test_3/: dir_list.txt  linker_cap_114.x  linker_cap_187.x  linker_cap_2.x  linker_cap_206.x  linker_cap_254.x  print.cap
compartment_testcases/test_4/: dir_list.txt  htif.cap  linker_cap_137.x  linker_cap_160.x  linker_cap_184.x  linker_cap_255.x  linker_cap_78.x  linker_cap_81.x  print_exception.cap
compartment_testcases/test_5/: dir_list.txt  (+9 more)
files/: ocaml-boot-riscv.pc.in
include/: boot.h  ocaml-boot-riscv.h  ocaml-riscv-boot.h  print.h
src/: Makefile  assert.h  atomic.h  bits.h  bool.h  compat.c  compat.cap  compat.cc  compat.s  config.h  config.s  constructors.c  constructors.cap  constructors.cc  constructors.h  constructors.s  defs.h  encoding.h  htif.c  htif.cc  htif.h  htif.s  htif_exception.c  htif_exception.h  initialize_pc_base_bounds.c  ocaml-freestanding-compat.cc  ocaml-freestanding-compat.h  ostream.h  output.cc  output.h  print.c  print.cap  print.cc  print.h  print.s  print_exception.c  print_exception.h  read.cc  read.h  startup.S  (+31 more)
(+232 files in other folders)
